fix dismiss icon on safari

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -315,7 +315,7 @@ $disabled-color: #e8e8e8;
             border: 0;
             padding: 0;
             margin-left: 10px !important;
-            line-height: 0;
+            line-height: 1;
         }
     }
 }
